--- a/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -156,19 +156,18 @@ LastLevel=/Game/TestingLevel
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprint/BP_Enemy_AI_BTree.BP_Enemy_AI_BTree
-OpenAssetsAtExit=/Game/Blueprint/BP_Enemy.BP_Enemy
-OpenAssetsAtExit=/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner
-OpenAssetsAtExit=/Game/Blueprint/BP_PlayerController.BP_PlayerController
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_AI_ENEMY_CONTROLLER.BP_AI_ENEMY_CONTROLLER
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BB_ENEMY_BEHAVIOR.BB_ENEMY_BEHAVIOR
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_ENEMY_BEHAVIOR_TREE.BP_ENEMY_BEHAVIOR_TREE
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK.BP_TALKY_TASK
 OpenAssetsAtExit=/Game/Blueprint/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Blueprint/BP_Tile1.BP_Tile1
 OpenAssetsAtExit=/Game/Blueprint/BP_Typopatamus.BP_Typopatamus
-OpenAssetsAtExit=/Game/Blueprint/BT_Talky_task.BT_Talky_task
+OpenAssetsAtExit=/Game/Blueprint/BP_PlayerController.BP_PlayerController
 
 [RootWindow]
-ScreenPosition=X=2845.000 Y=171.000
-WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+ScreenPosition=X=2560.000 Y=41.000
+WindowSize=X=2554.000 Y=1393.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1632,6 +1631,31 @@ BP_Typopatamus_C.Game=True
 BP_Typopatamus_C.GameMode=True
 BP_Typopatamus_C.Physics=True
 BP_Typopatamus_C.Events=True
+BlackboardData.Parent=True
+BlackboardData.Key=True
+BP_TALKY_TASK_C.Task=True
+BP_TALKY_TASK_C.Description=True
+BP_TASK_GO_TO_PLAYER_C.Task=True
+BP_TASK_GO_TO_PLAYER_C.Description=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+BP_TASK_GO_TO_PLAYER_C.Default=True
+WorldSettings.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.HLODSystem=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.Foliage=True
+WorldSettings.Landscape=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+WorldSettings.Networking=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1648,7 +1672,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprint
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1656,22 +1680,29 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/BT_Talky_task
+MRUItem0=/Game/Blueprint/BP_PlayerController
 MRUItem1=/Game/Blueprint/BP_Typopatamus
-MRUItem2=/Game/Blueprint/BP_Tile1
-MRUItem3=/Game/Blueprint/BP_Player
-MRUItem4=/Game/Blueprint/BP_PlayerController
-MRUItem5=/Game/Blueprint/BP_EnemySpawner
-MRUItem6=/Game/Blueprint/BP_Enemy_AI_BTree
-MRUItem7=/Game/Blueprint/BP_Enemy
-MRUItem8=/Game/Assets/Untitled_012
-MRUItem9=/Game/Blueprint/BP_AI_Enemy_Controller
-MRUItem10=/Game/Blueprint/BP_Enemy_Talk_task
-MRUItem11=/Game/Blueprint/BP_Enemy_AI_Behavior
-MRUItem12=/Game/Blueprint/BP_Tile3
-MRUItem13=/Game/Blueprint/BP_Tile2
+MRUItem2=/Game/Blueprint/BP_Player
+MRUItem3=/Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK
+MRUItem4=/Game/Blueprint/enemy_AI_BP/BP_TASK_GO_TO_PLAYER
+MRUItem5=/Game/Blueprint/enemy_AI_BP/BP_ENEMY_BEHAVIOR_TREE
+MRUItem6=/Game/Blueprint/enemy_AI_BP/BB_enemyBehavior
+MRUItem7=/Game/Blueprint/enemy_AI_BP/BP_AI_Enemy_Controller
+MRUItem8=/Game/Blueprint/BT_Talky_task
+MRUItem9=/Game/Blueprint/BP_Tile1
+MRUItem10=/Game/Blueprint/BP_EnemySpawner
+MRUItem11=/Game/Blueprint/BP_Enemy_AI_BTree
+MRUItem12=/Game/Blueprint/BP_Enemy
+MRUItem13=/Game/Assets/Untitled_012
+MRUItem14=/Game/Blueprint/BP_AI_Enemy_Controller
+MRUItem15=/Game/Blueprint/BP_Enemy_Talk_task
+MRUItem16=/Game/Blueprint/BP_Enemy_AI_Behavior
+MRUItem17=/Game/Blueprint/BP_Tile3
+MRUItem18=/Game/Blueprint/BP_Tile2
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1679,11 +1710,20 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
-Object=
+Object="\"Object.AI.AI|BehaviorTree\" "
 ConsoleSettings="\"Object.AutoComplete.AutoCompleteMapPaths\" "
 EnhancedInputDeveloperSettings="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
 DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
+BlackboardData="\"Object.Blackboard\" "
+DataAsset="\"Object.Blackboard\" "
+BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+BP_PlayerController_C="\"Object.Controller.Controller|Transform\" "
+PlayerController="\"Object.Controller.Controller|Transform\" "
+Controller="\"Object.Controller.Controller|Transform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Assets/Untitled_012.Untitled_012;
@@ -1817,6 +1857,9 @@ GameMapsSettings.DefaultMaps=True
 /Game/Blueprint/BP_Tile1.BP_Tile1=1
 /Game/Blueprint/BP_Enemy_AI_BTree.BP_Enemy_AI_BTree=1
 /Game/Assets/Untitled_012.Untitled_012=1
+/Game/Blueprint/BP_PlayerController.BP_PlayerController=1
+/Game/Blueprint/BP_Typopatamus.BP_Typopatamus=1
+/Game/Blueprint/BT_Talky_task.BT_Talky_task=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
