forgot the save

--- a/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/TestLevel3
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprint/BP_ENEMY1.BP_ENEMY1
 OpenAssetsAtExit=/Game/Blueprint/BP_Player.BP_Player
 OpenAssetsAtExit=/Game/Assets/Goblin_type1.Goblin_type1
@@ -168,7 +168,7 @@ OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TASK_GO_TO_PLAYER.BP_TASK_GO_TO_
 OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TASK_SET_PLAYER_LOCATION.BP_TASK_SET_PLAYER_LOCATION
 
 [RootWindow]
-ScreenPosition=X=2591.000 Y=89.000
+ScreenPosition=X=2595.000 Y=76.000
 WindowSize=X=2484.000 Y=1323.000
 InitiallyMaximized=False
 
@@ -1154,6 +1154,8 @@ GeometryProcessingInterfaces.TimeStamp=2023.03.10-03.30.22
 GeometryProcessingInterfaces.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2023.03.10-03.30.28
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2023.03.10-03.30.28
+NewLevelDialog.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1909,7 +1911,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
-Object="\"Object\" \"Object.Blackboard\" "
+Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 ConsoleSettings="\"Object.AutoComplete.AutoCompleteMapPaths\" "
 EnhancedInputDeveloperSettings="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
 DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
@@ -2127,6 +2129,9 @@ GameMapsSettings.DefaultMaps=True
 /Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK.BP_TALKY_TASK=1
 /Game/Blueprint/enemy_AI_BP/BP_TASK_SET_PLAYER_LOCATION.BP_TASK_SET_PLAYER_LOCATION=1
 /Game/Blueprint/BP_ENEMY1.BP_ENEMY1=1
+/Game/Assets/Goblin_type1.Goblin_type1=1
+/Game/Assets/Untitled_008.Untitled_008=1
+/Game/Assets/Untitled_005.Untitled_005=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
