addded word bank for the enemies in BP_Player

--- a/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
+++ b/Hippopatamus/Saved/Config/LinuxEditor/EditorPerProjectUserSettings.ini
@@ -155,17 +155,19 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/TestLevel3
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprint/BP_ENEMY1.BP_ENEMY1
+OpenAssetsAtExit=/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner
 OpenAssetsAtExit=/Game/Blueprint/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Assets/Goblin_type1.Goblin_type1
-OpenAssetsAtExit=/Game/Assets/Untitled_008.Untitled_008
-OpenAssetsAtExit=/Game/Assets/Untitled_005.Untitled_005
+OpenAssetsAtExit=/Game/Blueprint/BP_Typopatamus.BP_Typopatamus
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_AI_ENEMY_CONTROLLER.BP_AI_ENEMY_CONTROLLER
 OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_ENEMY_BEHAVIOR_TREE.BP_ENEMY_BEHAVIOR_TREE
 OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BB_ENEMY_BEHAVIOR.BB_ENEMY_BEHAVIOR
-OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_AI_ENEMY_CONTROLLER.BP_AI_ENEMY_CONTROLLER
+OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK.BP_TALKY_TASK
 OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TASK_GO_TO_PLAYER.BP_TASK_GO_TO_PLAYER
 OpenAssetsAtExit=/Game/Blueprint/enemy_AI_BP/BP_TASK_SET_PLAYER_LOCATION.BP_TASK_SET_PLAYER_LOCATION
+OpenAssetsAtExit=/Game/Texts/columnStruct.columnStruct
+OpenAssetsAtExit=/Game/Blueprint/BP_PlayerController.BP_PlayerController
 
 [RootWindow]
 ScreenPosition=X=2595.000 Y=76.000
@@ -1856,6 +1858,14 @@ BP_Tile2_C.TransformCommon=True
 BP_Tile2_C.Networking=True
 BP_Tile3_C.TransformCommon=True
 BP_Tile3_C.Networking=True
+K2Node_VariableSet.Events=True
+UserDefinedStruct.Structure=True
+DataTable.ImportOptions=True
+columnStruct.None=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_BreakStruct.PinOptions=True
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1872,7 +1882,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprint
+ContentBrowserDrawer.SelectedPaths=/Game/Texts
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1884,26 +1894,26 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprint/enemy_AI_BP/BP_TASK_SET_PLAYER_LOCATION
-MRUItem1=/Game/Blueprint/enemy_AI_BP/BP_TASK_GO_TO_PLAYER
-MRUItem2=/Game/Blueprint/enemy_AI_BP/BP_AI_Enemy_Controller
-MRUItem3=/Game/Blueprint/enemy_AI_BP/BP_ENEMY_BEHAVIOR_TREE
-MRUItem4=/Game/Assets/Untitled_005
-MRUItem5=/Game/Assets/Untitled_008
-MRUItem6=/Game/Assets/Goblin_type1
-MRUItem7=/Game/Blueprint/BP_Player
-MRUItem8=/Game/Blueprint/BP_ENEMY1
-MRUItem9=/Game/Blueprint/BP_EnemySpawner
-MRUItem10=/Game/Blueprint/BP_Enemy
-MRUItem11=/Game/Blueprint/BP_PlayerController
-MRUItem12=/Game/Blueprint/BP_Typopatamus
-MRUItem13=/Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK
-MRUItem14=/Game/Blueprint/enemy_AI_BP/BB_enemyBehavior
-MRUItem15=/Game/Blueprint/BT_Talky_task
-MRUItem16=/Game/Blueprint/BP_Tile1
-MRUItem17=/Game/Blueprint/BP_Enemy_AI_BTree
-MRUItem18=/Game/Assets/Untitled_012
-MRUItem19=/Game/Blueprint/BP_AI_Enemy_Controller
+MRUItem0=/Game/Blueprint/BP_PlayerController
+MRUItem1=/Game/Blueprint/BP_Enemy
+MRUItem2=/Game/Texts/WordBank_-_Sheet1
+MRUItem3=/Game/Texts/NewUserDefinedStruct
+MRUItem4=/Game/Blueprint/enemy_AI_BP/BP_TASK_SET_PLAYER_LOCATION
+MRUItem5=/Game/Blueprint/enemy_AI_BP/BP_TASK_GO_TO_PLAYER
+MRUItem6=/Game/Blueprint/enemy_AI_BP/BP_TALKY_TASK
+MRUItem7=/Game/Blueprint/enemy_AI_BP/BP_ENEMY_BEHAVIOR_TREE
+MRUItem8=/Game/Blueprint/enemy_AI_BP/BP_AI_Enemy_Controller
+MRUItem9=/Game/Blueprint/BP_Typopatamus
+MRUItem10=/Game/Blueprint/BP_Player
+MRUItem11=/Game/Blueprint/BP_EnemySpawner
+MRUItem12=/Game/Blueprint/BP_ENEMY1
+MRUItem13=/Game/Assets/Untitled_005
+MRUItem14=/Game/Assets/Untitled_008
+MRUItem15=/Game/Assets/Goblin_type1
+MRUItem16=/Game/Blueprint/enemy_AI_BP/BB_enemyBehavior
+MRUItem17=/Game/Blueprint/BT_Talky_task
+MRUItem18=/Game/Blueprint/BP_Tile1
+MRUItem19=/Game/Blueprint/BP_Enemy_AI_BTree
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1911,7 +1921,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" "
 DeveloperSettings=
-Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+Object="\"Object\" "
 ConsoleSettings="\"Object.AutoComplete.AutoCompleteMapPaths\" "
 EnhancedInputDeveloperSettings="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
 DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[0].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[1].Object.Default\" \"Object.Enhanced Input.PlatformSettings.Settings.Settings[2].Object.Default\" "
@@ -1921,10 +1931,10 @@ DataAsset="\"Object\" \"Object.Blackboard\" "
 BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
-BP_PlayerController_C="\"Object.Controller.Controller|Transform\" "
-PlayerController="\"Object.Controller.Controller|Transform\" "
-Controller="\"Object.Controller.Controller|Transform\" "
+EdGraphNode="\"Object\" "
+BP_PlayerController_C=
+PlayerController=
+Controller=
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
@@ -1951,6 +1961,17 @@ BP_AI_ENEMY_CONTROLLER_C="\"Object.Controller.Controller|Transform\" "
 AIController="\"Object.Controller.Controller|Transform\" "
 BP_TASK_GO_TO_PLAYER_C="\"Object\" "
 BP_TASK_SET_PLAYER_LOCATION_C="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+DataTable="\"Object\" "
+DataTableFactory="\"Object\" "
+Factory="\"Object\" "
+K2Node_BreakStruct="\"Object\" "
+K2Node_StructMemberGet="\"Object\" "
+K2Node_StructOperation="\"Object\" "
+K2Node_Variable="\"Object\" "
+K2Node="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -2080,9 +2101,9 @@ BP_Player_C=CameraActor.PostProcess.Lens,
 BrushComponent=
 NavMeshBoundsVolume=CameraActor.PostProcess.Lens,
 K2Node_VariableGet=CameraActor.PostProcess.Lens,
-K2Node_VariableSet=CameraActor.PostProcess.Lens
-PropertyWrapper=CameraActor.PostProcess.Lens
-BP_ENEMY1_C=CameraActor.PostProcess.Lens
+K2Node_VariableSet=CameraActor.PostProcess.Lens,
+PropertyWrapper=CameraActor.PostProcess.Lens,
+BP_ENEMY1_C=CameraActor.PostProcess.Lens,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,
 CapsuleComponent=CameraActor.PostProcess.Lens,
@@ -2091,6 +2112,10 @@ BP_Tile3_C=CameraActor.PostProcess.Lens,
 BP_Tile1_C=CameraActor.PostProcess.Lens,
 BP_EnemySpawner_C=CameraActor.PostProcess.Lens,
 Actor=CameraActor.PostProcess.Lens,
+SkeletalMeshComponent=CameraActor.PostProcess.Lens,
+BP_PlayerController_C=CameraActor.PostProcess.Lens,
+K2Node_CallFunction=CameraActor.PostProcess.Lens,
+DataTableFactory=CameraActor.PostProcess.Lens,
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2111,6 +2136,7 @@ AndroidRuntimeSettings=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultMaps=True
+PropertyWrapper.Variable=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprint/BP_Enemy.BP_Enemy=1
@@ -2172,7 +2198,7 @@ bShowParentClassInOverrides=True
 bShowEmptySections=True
 bShowAccessSpecifier=False
 Bookmarks=()
-PerBlueprintSettings=(("/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner", (Breakpoints=((Node="/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner:SpawnEnemy.K2Node_SpawnActorFromClass_0")))),("/Game/Blueprint/BP_ENEMY1.BP_ENEMY1", (Breakpoints=((Node="/Game/Blueprint/BP_ENEMY1.BP_ENEMY1:EventGraph.K2Node_CallFunction_4"),(Node="/Game/Blueprint/BP_ENEMY1.BP_ENEMY1:EventGraph.K2Node_CallFunction_13"),(Node="/Game/Blueprint/BP_ENEMY1.BP_ENEMY1:EventGraph.K2Node_CallFunction_15")))),("/Game/Blueprint/BP_Player.BP_Player", (Breakpoints=((Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_CallFunction_7"),(Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_DynamicCast_0"),(Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_CallFunction_11")))))
+PerBlueprintSettings=(("/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner", (Breakpoints=((Node="/Game/Blueprint/BP_EnemySpawner.BP_EnemySpawner:SpawnEnemy.K2Node_SpawnActorFromClass_0")))),("/Game/Blueprint/BP_ENEMY1.BP_ENEMY1", (Breakpoints=((Node="/Game/Blueprint/BP_ENEMY1.BP_ENEMY1:EventGraph.K2Node_CallFunction_15"),(Node="/Game/Blueprint/BP_ENEMY1.BP_ENEMY1:EventGraph.K2Node_CallFunction_13")))),("/Game/Blueprint/BP_Player.BP_Player", (Breakpoints=((Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_CallFunction_7"),(Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_DynamicCast_0"),(Node="/Game/Blueprint/BP_Player.BP_Player:EventGraph.K2Node_CallFunction_11")))))
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
